add basic nav and footer

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Twilight Tresses</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css" >
+    <title>Symphony.Tresses</title>
   </head>
   <body>
     <div id="root"></div>
