--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" href="./styles.css" >
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css" >
+    <link rel="stylesheet" type="text/css" href="./styles/nav.css" >
+    <link rel="stylesheet" type="text/css" href="./styles/main.css" >
     <title>Symphony.Tresses</title>
   </head>
   <body>
